New DumpTrigger art module.

--- a/icaruscode/Decode/CMakeLists.txt
+++ b/icaruscode/Decode/CMakeLists.txt
@@ -7,6 +7,7 @@ art_make(
                         PMTconfigurationExtraction_module.cc
                         DumpPMTconfiguration_module.cc
                         DumpArtDAQfragments_module.cc
+                        DumpTrigger_module.cc
                         DaqDecoderICARUSPMT_module.cc
           MODULE_LIBRARIES
                         icarus_signal_processing
@@ -77,6 +78,15 @@ simple_plugin(DumpArtDAQfragments module
   ${MF_MESSAGELOGGER}
   fhiclcpp
   cetlib_except
+  )
+
+simple_plugin(DumpTrigger module
+  icaruscode_Decode_DataProducts
+  lardataobj::Simulation
+  lardataobj::RawData
+  messagefacility::MF_MessageLogger
+  fhiclcpp
+  cetlib_except::cetlib_except
   )
 
 install_headers()
