--- a/icaruscode/Utilities/CMakeLists.txt
+++ b/icaruscode/Utilities/CMakeLists.txt
@@ -4,6 +4,7 @@ art_make(
     "SaveConfigurationIntoTFile_module.cc"
     "DummyFilter_module.cc"
     "DummyProducer_module.cc"
+    "DummyAnalyzer_module.cc"
     "DuplicateEventTracker_service.cc"
   LIB_LIBRARIES
     ${ART_ROOT_IO_ROOTDB}
@@ -40,6 +41,7 @@ simple_plugin(DuplicateEventTracker "service"
 
 simple_plugin(DummyFilter "module")
 simple_plugin(DummyProducer "module")
+simple_plugin(DummyAnalyzer "module")
 
 
 install_headers()
