Update to most recent trigger efficiency code. Compiles but need to test running the updated stage1 and analysis stages

--- a/icaruscode/Analysis/trigger/CMakeLists.txt
+++ b/icaruscode/Analysis/trigger/CMakeLists.txt
@@ -23,7 +23,24 @@ cet_build_plugin(TimedTrackSelector art::module
   ROOT::Core
   )
 
+cet_build_plugin(TimedTrackSelectorCRT art::module
+  LIBRARIES
+  icarusalg::Utilities
+  lardataobj::AnalysisBase
+  lardataobj::RecoBase
+  messagefacility::MF_MessageLogger
+  ROOT::Core
+  )
+
 cet_build_plugin(BeamGateInfoFromTracks  art::module
+  LIBRARIES
+  lardataobj::Simulation
+  lardataobj::AnalysisBase
+  lardataobj::RecoBase
+  lardata::DetectorInfoServices_DetectorClocksServiceStandard_service
+  )
+
+cet_build_plugin(BeamGateInfoFromTracksCRT  art::module
   LIBRARIES
   lardataobj::Simulation
   lardataobj::AnalysisBase
@@ -52,6 +69,29 @@ cet_build_plugin(TimeTrackTreeStorage art::module
   fhiclcpp::fhiclcpp
   messagefacility::MF_MessageLogger
 )
+
+cet_build_plugin(TimeTrackTreeStorageCRT art::module
+  LIBRARIES
+  icaruscode_Analysis_trigger
+  icaruscode_PMT_Algorithms
+  icaruscode_Decode_DataProducts
+  larcore::Geometry_Geometry_service
+  larcorealg::Geometry
+  lardataobj::AnalysisBase
+  lardataobj::RecoBase
+  lardataobj::RawData
+  lardataobj::Simulation
+  ROOT::Tree
+  ROOT::Core
+  art_root_io::TFileService_service
+  art::Framework_Services_Registry
+  art::Framework_Core
+  art::Framework_Principal
+  canvas::canvas
+  fhiclcpp::fhiclcpp
+  messagefacility::MF_MessageLogger
+)
+
 
 install_headers()
 install_source()
