Major block update to trigger efficiency tree with CRT
* added calorimetry according to Gray's suggestion
* added matched CRT hit information
* added t0 from TPC and from CRT; in addition, plain "t0" is from the input selection
* chopped dead parts of the code
* `createtree_timed_tracks_icarus_CRT.fcl` job configuration updated
  to work with current Stage1 input files + CRT matching

--- a/icaruscode/Analysis/trigger/CMakeLists.txt
+++ b/icaruscode/Analysis/trigger/CMakeLists.txt
@@ -73,9 +73,10 @@ cet_build_plugin(TimeTrackTreeStorage art::module
 
 cet_build_plugin(TimeTrackTreeStorageCRT art::module
   LIBRARIES
-  icaruscode_Analysis_trigger
-  icaruscode_PMT_Algorithms
-  icaruscode_Decode_DataProducts
+  icaruscode::Analysis_trigger
+  icaruscode_CRTUtils
+  icaruscode::PMT_Algorithms
+  icaruscode::Decode_DataProducts
   larcore::Geometry_Geometry_service
   larcorealg::Geometry
   lardataobj::AnalysisBase
